fix the conflict in opportunity_show.html,lead_show.html,lead_list.html
Former-commit-id: 601e733cd3f3ca91d0636e217b608b3a6ec2d439 [formerly 551b362e5eab9f4e49d6225e23d794684e0b2dcd] [formerly f381541d1b005a137468b2b7ef97770b1010d352 [formerly b85638f9bdecb7834a82c88bda9caf081b29271e]]
Former-commit-id: 38b336de2ab7cfcc026afbde916fd4cfd6a5f318 [formerly f5311e73e2cd516a69366fa7d6ca2ffde4f25845]
Former-commit-id: 77d6d636af3237eddbcb7ca4d7d1dfa384ecf271

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -89,7 +89,7 @@
                   <ul class="list-unstyled leadInfos">
                       <li>
                         <span>
-                           Owner:
+                           {{ _('Owner:')}}
                           <a class="tag ng-binding" href="/#/search/type:Case owner:<%= casee.owner.google_user_id %>">
                             #<%= casee.owner.google_display_name %>
                           </a>
@@ -592,11 +592,9 @@
                               </div>
                               <!--/span-->
                             </div>
-<<<<<<< HEAD
+
                                    {{ _('allday')}} <input type="checkbox" ng-model="allday"/>
-=======
-                                   All day <input type="checkbox" ng-model="allday"/>
->>>>>>> 8b22cb29e7cee7cc324175b36018ef7755f23c89
+
                               <!-- pick only date (the case of all day) -->
                               <div class="row" ng-show="allday">
                                 <div class="col-md-12 margin-bottom-10">
