--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -155,7 +155,7 @@
           <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
             <div class="loaderCardContent">
                <img class="img-responsive " src="/static/img/gloader.gif">
-               <span>  Loading...</span>
+               <span>  {{ _('Loading...')}}</span>
             </div>
         </div>
         </div><!--innercardcontaine-->
