--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -99,7 +99,7 @@
 
                                          <li>
                                            <span>
-                                              Owner:
+                                             {{_('Owner:')}}
                                              <a class="tag ng-binding" href="/#/search/type:Lead owner:<%= lead.owner.google_user_id %>">
                                                #<%= lead.owner.google_display_name %>
                                              </a>
