--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -89,7 +89,7 @@
                   <ul class="list-unstyled leadInfos">
                       <li>
                         <span>
-                           Owner:
+                          {{ _('Owner:')}}
                           <a class="tag ng-binding" href="/#/search/type:Opportunity owner:<%= opportunity.owner.google_user_id %>">
                             #<%= opportunity.owner.google_display_name %>
                           </a>
