--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -203,7 +203,7 @@
           <div class="cardElement loaderCard" ng-show="isMoreItemLoading" data-span="all">
             <div class="loaderCardContent">
                <img class="img-responsive " src="/static/img/gloader.gif">
-               <span>  Loading...</span>
+               <span> {{ _('Loading...')}}</span>
             </div>
           </div>
         </div><!--/inner-cards-container-->
