fix profile_img display on contact list page
Former-commit-id: 38e5376eb9403bb3c3ecc53d4e5b33b5b202c3ee [formerly f795b3d1115293241917658b1e06c290b08710f2] [formerly b670a3181e6fb199764fe45eb7ba3837f182fd72 [formerly d8f9e130618929fb592e1b5520bb823d0762d589]]
Former-commit-id: 3d3aa4ed152056da9e0d53898331a3da24b30edf [formerly 52572eb06c1cd01497be9f0147f5700f89ec20e0]
Former-commit-id: b45ce5a8de99e7c31daf514514c59f209d64b306

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -111,7 +111,7 @@
                 <div class="pic">
                   <a href="/#/contacts/show/<%= contact.id %>" class="startup-link" title="<%=contact.firstname%> <%=contact.lastname%>">
                     <img ng-hide="contact.profile_img_url"  class="img-responsive profile-photo" src="/static/img/avatar_contact.jpg" >
-                    <img ng-show="contact.profile_img_url"  class="img-responsive profile-photo" ng-src="https://docs.google.com/uc?id=<%= contact.profile_img_id %>" data-hasqtip="2">
+                    <img ng-show="contact.profile_img_url"  class="img-responsive profile-photo" ng-src="<%= contact.profile_img_url %>" data-hasqtip="2">
                   </a>
                 </div>
                 <div class="text">
@@ -273,12 +273,12 @@
                   ng-model='tag_item.name'  onbeforesave="inlinePatch('tag','', 'title',tag_item,$data)">
                       <%= tag_item.name %>
                   </span>
-                 <input 
-                 type="checkbox" 
-                 ng-show="!manage_tags" 
-                 ng-click="selectTag(tag_item,$index,$event)" 
-                 style="margin-right: 10px;" 
-                 class="pull-right customCheck" 
+                 <input
+                 type="checkbox"
+                 ng-show="!manage_tags"
+                 ng-click="selectTag(tag_item,$index,$event)"
+                 style="margin-right: 10px;"
+                 class="pull-right customCheck"
                  ng-checked="isSelected()">
 
                   <form ng-submit="doneEditTag(tag_item)" ng-show="(tag_item==edited_tag)&&(manage_tags)">
