fix some bugs after implementing translate
Former-commit-id: 86059c7daafc8d0f7b426bca391696048b0f7dcf [formerly 4f5750eab8f5083124c8baf76005e9ef93d46b64] [formerly 560b8e6c4a9a66860996af0d4ed64db82e73d1d3 [formerly 8cb8e3835b2fde364fca79f3069203507ed2c97b]]
Former-commit-id: e84ad89c47d464525ff6d52215a534a30767dd16 [formerly 5e2c6fe6b4ebfaaaf36148a8788494a1640df062]
Former-commit-id: be69c186bd7c4cac3e75ff3e4cbee5e5cfaf932a

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -14,8 +14,8 @@
            </ul>
         </div>
 
-    </div> 
-  
+    </div>
+
 
     <div class=" subHeaderContent">
       <div class="col-md-9">
@@ -86,13 +86,25 @@
                     <div class="modal-body">
                        <form id="addAccount" name="addaccount"  class=""  ng-keyup="addAccountOnKey(account)">
                     <div class="form-group">
-                        <label  class="required">{{_("Name")}}</label>
+                        <label  class="required">{{_('Name')}}</label>
                           <input type="text" class="form-control" required  ng-model="account.name">
                     </div>
                     <div class="form-group">
-                        <label  class="required">{{_("Type")}}</label>
+                        <label  class="required">{{_('Type')}}</label>
                           <select value="Customer" ng-model="account.account_type" class="form-control">
-                         <option value="Competitor">{{_('Competitor')}}</option><option value="Customer">{{_('Customer'))}</option><option value="Distributor">{{_('Distributor')}}</option><option value="Integrator">{{_('Integrator')}}</option><option value="Investor">{{_('Investor')}}</option><option value="Partner">{{_('Partner')}}</option><option value="Press">{{_('Press')}}</option><option value="Prospect">{{_('Prospect')}}</option><option value="Reseller">{{_('Reseller')}}</option><option value="Supplier">{{_('Supplier')}}</option><option value="Vendor">{{_('Vendor')}}</option><option value="Other">{{_('Other')}}</option></select>
+                         <option value="Competitor">{{_('Competitor')}}</option>
+                         <option value="Customer">{{_('Customer')}}</option>
+                         <option value="Distributor">{{_('Distributor')}}</option>
+                         <option value="Integrator">{{_('Integrator')}}</option>
+                         <option value="Investor">{{_('Investor')}}</option>
+                         <option value="Partner">{{_('Partner')}}</option>
+                         <option value="Press">{{_('Press')}}</option>
+                         <option value="Prospect">{{_('Prospect')}}</option>
+                         <option value="Reseller">{{_('Reseller')}}</option>
+                         <option value="Supplier">{{_('Supplier')}}</option>
+                         <option value="Vendor">{{_('Vendor')}}</option>
+                         <option value="Other">{{_('Other')}}</option>
+                         </select>
                     </div>
                     <div class="form-group">
                         <label  class="required control-label">{{_("Industry")}} </label>
@@ -289,7 +301,7 @@
               </div>
             </form>
             <div class="form-group btn-manage-tags" ng-show="tags">
-              <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">        
+              <button class="btn btn-default btn-block " ng-click="manage_tags=!manage_tags;manage()">
               {{_('Manage Tags')}}
               </button>
             </div>
