--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -346,7 +346,7 @@
                     height: '20px'
   });
   $("#select2_sample2").select2({
-        placeholder: "{{ _('Click to Select a label')}",
+        placeholder: "{{ _('Click to Select a label')}}",
         allowClear: false
   });
   var handleUniform = function () {
