--- a/templates/contacts/contact_show.html
+++ b/templates/contacts/contact_show.html
@@ -153,7 +153,7 @@
                     <a ng-click="waterfall(); selectedTab = 3;">Contacts</a>
                   </li-->
                   <li class="ng-tab sm-menu" ng-class="{active: selectedTab == 7}">
-                    <a ng-click="waterfallTrigger();selectedTab = 7;">{{ _('Attach Documents</a>
+                    <a ng-click="waterfallTrigger();selectedTab = 7;">{{ _('Attach Documents')}}</a>
                   </li>
                   <!-- <li class="ng-tab md-menu" ng-class="{active: selectedTab == 4}">
                     <a ng-click="selectedTab = 4;">Needs</a>
@@ -204,7 +204,7 @@
                             111054727630979006769@gcdc2013-iogrow.appspotmail.com
                           </a>
                           <br>
-                          {{ _('Or just add notes to remember what's important.')}}
+                          {{ _('Or just add notes to remember what\'s important.')}}
                           <br>
                         </p>
 
