--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -163,7 +163,7 @@
                             111054727630979006769@gcdc2013-iogrow.appspotmail.com
                           </a>
                           <br>
-                          {{ _('Or just add notes to remember what's important.')}}
+                          {{ _('Or just add notes to remember what\'s important.')}}
                           <br>
                         </p>
                         <form id="addNote"class="ng-pristine ng-valid">
@@ -608,7 +608,7 @@
                                             <i class="fa fa-bell-o"></i>
 
                                               <input cusdatetimepicker data-model="newTask.reminder" type="text" class="form-control" placeholder="{{_('Add a reminder')}}" value="" id="leadEventStartsAt">
-                                          </div>                                         
+                                          </div>
 
                                               <input cusdatetimepicker data-model="newTask.reminder" type="text" class="form-control" placeholder="Add a reminder" value="" id="leadEventStartsAt">
                                           </div>
