--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -71,11 +71,9 @@
           <div class="col-md-10">
             <div class="row">
               <div class="col-md-12">
-<<<<<<< HEAD
-                <span class="topic-content" ng-bind-html-unsafe="note.content">                  
-=======
+
                 <span class="topic-content" ng-bind-html-unsafe="note.content">
->>>>>>> 91d765d675a86b709693972938c7ef9eb4e128ce
+
                 </span>
                 <ul class="chats">
                   <li class="in" ng-repeat="comment in comments" id="comment_<%=$index%>">
@@ -130,7 +128,7 @@
         <div class="portlet showCard">
           <div class="portlet-title line">
             <div class="caption">
-              {{_('Who's involved')}}
+              {{_('Who\'s involved')}}
             </div>
           </div>
           <div class="portlet-body" id="chats">
