--- a/templates/activities/task_show.html
+++ b/templates/activities/task_show.html
@@ -64,7 +64,7 @@
                   <div class="form-group">
                         <input class="form-control" autofocus type="text" placeholder="Add a new task" id="taskTitle" ng-model="task.title">
 
-                        <p><strong>{{ _('When's it due?')}}</strong></p>
+                        <p><strong>{{ _('When\'s it due?')}}</strong></p>
                         <center>
                               <datetimepicker data-ng-model="task.due"
                                                     data-datetimepicker-config="{ startView:'day', minView:'day' }" />
@@ -321,7 +321,7 @@
       <div class="portlet showCard">
         <div class="portlet-title line">
           <div class="caption">
-            <i class="icon-user"></i>{{ _('Who's involved')}}
+            <i class="icon-user"></i>{{ _('Who\'s involved')}}
           </div>
         </div>
                   <div class="portlet-body">
