--- a/templates/documents/show.html
+++ b/templates/documents/show.html
@@ -150,7 +150,7 @@
                     <div class="portlet showCard">
                         <div class="portlet-title line">
                             <div class="caption">
-                                <i class="icon-user"></i>{{ _('Who's involved')}}
+                                <i class="icon-user"></i>{{ _('Who\'s involved')}}
                             </div>
                         </div>
                         <div class="portlet-body">
