--- a/templates/leads/lead_show.html
+++ b/templates/leads/lead_show.html
@@ -199,7 +199,7 @@
                                                         111054727630979006769@gcdc2013-iogrow.appspotmail.com
                                                     </a>
                                                     <br>
-                                                    {{_('Or just add notes to remember what's important.')}}
+                                                    {{_('Or just add notes to remember what\'s important.')}}
                                                     <br>
                                                 </p>
                                                 <form id="addNote" class="ng-pristine ng-valid">
