Replace delete this case by delete this Opportunity
Former-commit-id: 3e92752cc15111a54d3c61ce07106b7a36845454 [formerly e6c3de7dc7be69b946c416ade221db90f75f8699] [formerly 629062e8c561fdd35101004c362a691a0ecb59ca [formerly fae5ca4aa4fca28c1d40d3e8c4d6d4ff07bc5fcf]]
Former-commit-id: c33717bf0653dc021ea2d6a5e2ae5ba47e6d1443 [formerly 2568e6b536acfd2afb59ef667c2a1b326bcfbb8e]
Former-commit-id: 8a1ec3dee6bd6c10dd97bb439b5d1fbd2416771b

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -936,7 +936,7 @@
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
 
-                <input  ng-click="deleteopportunity()" type="submit" class="btn red" value="Delete this Case">
+                <input  ng-click="deleteopportunity()" type="submit" class="btn red" value="Delete this Opportunity">
                 <!--input ng-show="isLoading" type="submit" class="btn green" value="Loading..." disabled-->
               </div>
                </form>
