Add button cancel on Task form on all object, fix #878
Former-commit-id: 99b5944b07537dc624d9421c7a1a623621da19df [formerly 5aeba99ac0c0352d258f7f9d2eac78dadfa2d725] [formerly 600aeb89bd6d83355ad314f5fc5ba354a137df10 [formerly 0988a494b217b1d95cecf7b0ed52911d7c0499fb]]
Former-commit-id: 185e65043236f0df81dc0485519fad70c4607a21 [formerly db357133e93de907d3cb2fd28a65d7b1ad179cf8]
Former-commit-id: 13f45fba611f10579f30350ac46b14c5b1b94dda

--- a/templates/cases/case_show.html
+++ b/templates/cases/case_show.html
@@ -522,7 +522,7 @@
                       </div>
                       <div class="row">
                           <div class="col-md-12 margin-top-10">
-                              <p><span ng-hide="newTaskform">{{ _('Add New Task')}}</span><button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">{{ _('Add')}}</button></p>
+                              <p><span ng-hide="newTaskform">{{ _('Add New Task')}}</span><button type="button" ng-click="addTask(newTask)" class="btn blue btn-sm pull-right btn-inline">{{ _('Add')}}</button><button type="button" ng-click="closeTaskForm(newTask)" ng-show="newTaskform" class="cancelEventBtn btn btn-default btn-sm pull-right btn-inline">{{ _('Cancel')}}</button></p>
 
                           </div>
                       </div>
